Wrap the sidenav and article content in a flexbox to avoid issues with content overflowing weirdly on smaller screens.
Fixes https://github.com/google/dagger/issues/1886

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=315712480

--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -22,6 +22,16 @@
 
 }
 
+.c-article__container {
+  display: block;
+}
+
+@media (min-width: 42rem) {
+  .c-article__container {
+    display: flex;
+  }
+}
+
 .c-article__main {
   max-width: 76rem; // 760px;
   margin-right: auto;
