--- a/_sass/components/_sidenav.scss
+++ b/_sass/components/_sidenav.scss
@@ -19,12 +19,8 @@
    ========================================================================== */
 
 .c-sidenav {
-  position: relative;
-  float:left;
-  left: 0;
   padding: 0 2.5rem 2.5rem;
   background: $t-theme;
-  z-index: 10;
   list-style-type: none;
 
   &.is-fixed {
